--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "firebase": "^10.8.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
