--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-firebaseui": "^6.0.0",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
